up to 99 crores

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <div class="mb-3">
               <label class="form-label">Any Number</label>
               <input type="number" class="form-control" name="number" id="number" placeholder="Enter a number">
+              <div id="digit-info" class="form-text">Please enter less than 10 digit number</div>
             </div>
             <button id="submit" type="submit" class="btn btn-primary">Convert</button>
         </form>
 
-        <div class="mt-5 entered-div">
+        <div class="mt-3 entered-div">
             <p class="">You entered: <span id="words"></span></p>
         </div>
     </main>
